--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "11V3zW7gP1BrjrKFyfLx9cZRL4vG3c0T7",
-      "authorship_tag": "ABX9TyPPxJCuMFmhNZLo0PJpvUqW",
+      "authorship_tag": "ABX9TyMQtuWoX9TJFK5RrQmgR4EX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2047,7 +2047,9 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "test_data.head() #new addition"
+      ],
       "metadata": {
         "id": "we7RhovPKfSc"
       },
