--- a/Titanic.ipynb
+++ b/Titanic.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "11V3zW7gP1BrjrKFyfLx9cZRL4vG3c0T7",
-      "authorship_tag": "ABX9TyOJ6m5MkLZnDyRi3GuLsxto",
+      "authorship_tag": "ABX9TyOgekkvjwg/IdOYMKP0GelM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,7 +29,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "id": "OJmhHAHZ9rQa"
       },
@@ -50,7 +50,7 @@
       "metadata": {
         "id": "dOZURuMb_AKw"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -66,7 +66,7 @@
         "id": "BIX0S6E-_AUZ",
         "outputId": "e8a4a948-717d-43ea-f2fe-31fb3ede02c4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -441,7 +441,7 @@
         "id": "xjiP3tdt_AYP",
         "outputId": "3c2d6c52-8e04-477b-d6c0-8bfea1bb4604"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +483,7 @@
         "id": "nb8pKtKf_AbS",
         "outputId": "3878f36e-0b4a-4b67-9e12-2a459b7dbf24"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -855,7 +855,7 @@
         "id": "Dx3dpokm_Ad8",
         "outputId": "0f1bcf6b-8d64-4a71-d324-b3c5658b5612"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -891,7 +891,7 @@
       "metadata": {
         "id": "GWA45IEl_Aga"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -902,7 +902,7 @@
       "metadata": {
         "id": "-L28H47RBHbo"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -914,7 +914,7 @@
       "metadata": {
         "id": "6dBn8fnuBHsd"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -929,7 +929,7 @@
         "id": "fOqeCXdPBW83",
         "outputId": "8f3d5c00-2429-4b79-b0e9-a690082887da"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -962,7 +962,7 @@
       "metadata": {
         "id": "_faqDjhvBXJ7"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -974,7 +974,7 @@
       "metadata": {
         "id": "oCffbbjNBxi7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -990,7 +990,7 @@
       "metadata": {
         "id": "_bgjnbEaBxog"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1005,7 +1005,7 @@
       "metadata": {
         "id": "RVbXmDPmBxsG"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1029,7 +1029,7 @@
         "id": "jEQuaAl6Dqtk",
         "outputId": "fb6ba2c2-0e62-498c-b9be-7dbd75bee1a9"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1083,7 +1083,7 @@
         "id": "TxkXuaj4Dq0l",
         "outputId": "3d856c65-c954-4ba3-e61b-b5cc4409473f"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,7 +1105,7 @@
       "metadata": {
         "id": "4BnWZgnRDq3i"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1120,7 +1120,7 @@
         "id": "zDfErZ3yL2Wu",
         "outputId": "07138fc6-96bb-45e5-aaa1-1f43cdf23732"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1160,7 +1160,7 @@
         "id": "45RJ6IBKMJ_Z",
         "outputId": "020398ea-a923-4015-e630-c61f2dc5a54b"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1198,7 +1198,7 @@
         "id": "ZzaqgTisMVoA",
         "outputId": "affe0609-6fdf-4c64-d5c1-fb5086621889"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1564,7 +1564,7 @@
       "metadata": {
         "id": "b7veEuKGDq6P"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1577,7 +1577,7 @@
       "metadata": {
         "id": "_xWxtoFwDq8-"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1593,7 +1593,7 @@
         "id": "-njJ8D49RjJB",
         "outputId": "62a24079-9071-46f1-ca37-2d9621d18ace"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1955,7 +1955,7 @@
         "id": "njHGx86gDq_s",
         "outputId": "0044bc10-e04a-42a4-ce4d-6d77a6c95b47"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1980,7 +1980,7 @@
         "id": "Es8kkwzPLgsu",
         "outputId": "f4b54e7e-c6e9-4089-d47b-c8b00b99ff81"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1997,7 +1997,7 @@
       "metadata": {
         "id": "nVwiD0_RLydw"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2010,7 +2010,7 @@
       "metadata": {
         "id": "4JgSFIsIBxux"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2021,7 +2021,7 @@
       "metadata": {
         "id": "MEjTg9nnKfO9"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2030,8 +2030,17 @@
       "metadata": {
         "id": "we7RhovPKfSc"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "EDA analysis and feature engineering to be done."
+      ],
+      "metadata": {
+        "id": "GGLdCdGPcgFu"
+      }
     }
   ]
 }
